@@ -1,3 +1,4 @@
+2/10/14 increase height of arrow head on linear graph
 2/10/14 increase y-margin on linear scale, so that it looks more balanced and is similar to log scale
 2/10/14 increase horizontal spacing between zoom buttons a bit, increase touch areas
 2/10/14 Custom: made log scale a tag shorter, so that there's some whitespace below graph indicators when they're dragged to bottom of screen
